--- a/css/styles.css
+++ b/css/styles.css
@@ -71,3 +71,9 @@ body{
     padding-left: 15px;
     padding-right: 15px;
 }
+#carouselButton {
+    right:0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
